--- a/fdts/s32g274a-emu.dts
+++ b/fdts/s32g274a-emu.dts
@@ -15,29 +15,21 @@
 	};
 };
 
-&pinctrl0 {
-	board_pinctrl0 {
+&pinctrl {
+	board_pinctrl {
 		u-boot,dm-pre-reloc;
-		pinctrl0_uart1: pinctrl0_uart1 {
+		pinctrl_uart1: pinctrl_uart1 {
 			u-boot,dm-pre-reloc;
 			fsl,pins = <PB09_MSCR_S32G PB09_LIN1_TX_CFG
-				    PB10_MSCR_S32G PB10_LIN1_RX_CFG>;
-		};
-	};
-};
-
-&pinctrl1 {
-	board_pinctrl1 {
-		u-boot,dm-pre-reloc;
-		pinctrl1_uart1: pinctrl1_uart1 {
-			u-boot,dm-pre-reloc;
-			fsl,pins = <LIN1_RX_IMCR PB10_LIN1_RX_IN>;
+				    PB10_MSCR_S32G PB10_LIN1_RX_CFG
+				    LIN1_RX_IMCR PB10_LIN1_RX_IN
+				    >;
 		};
 	};
 };
 
 &uart1{
-	pinctrl-0 = <&pinctrl0_uart1 &pinctrl1_uart1>;
+	pinctrl-0 = <&pinctrl_uart1>;
 	pinctrl-names = "default";
 	status = "okay";
 };
