--- a/fdts/s32g274a-bluebox3.dts
+++ b/fdts/s32g274a-bluebox3.dts
@@ -12,20 +12,20 @@
 };
 
 &spi0 {
-	pinctrl-0 = <&pinctrl0_dspi0 &pinctrl1_dspi0>;
+	pinctrl-0 = <&pinctrl_dspi0>;
 	pinctrl-names = "default";
 	status = "okay";
 };
 
 &spi1 {
-	pinctrl-0 = <&pinctrl0_dspi1 &pinctrl1_dspi1>;
+	pinctrl-0 = <&pinctrl_dspi1>;
 	pinctrl-names = "default";
 	status = "okay";
 };
 
 &usdhc0 {
 	/* By default, sd0 pins are able to work at 100Mhz and 200Mhz */
-	pinctrl-0 = <&pinctrl0_sd0>;
+	pinctrl-0 = <&pinctrl_sd0>;
 	pinctrl-1 = <>;
 	pinctrl-2 = <>;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
@@ -41,7 +41,7 @@
 	status = "disabled";
 };
 
-&gpio0 {
+&gpio {
 	PA12 {
 		gpio-hog;
 		gpios = <12 0>;
@@ -74,10 +74,10 @@
 &i2c0 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
-	pinctrl-0 = <&pinctrl0_i2c0>;
-	pinctrl-1 = <&pinctrl0_i2c0_gpio>;
-	scl-gpios = <&gpio0 17 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
-	sda-gpios = <&gpio0 16 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	pinctrl-0 = <&pinctrl_i2c0>;
+	pinctrl-1 = <&pinctrl_i2c0_gpio>;
+	scl-gpios = <&gpio 17 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	sda-gpios = <&gpio 16 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	status = "okay";
 
 	eeprom@50 {
@@ -100,30 +100,30 @@
 &i2c1 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
-	pinctrl-0 = <&pinctrl0_i2c1 &pinctrl1_i2c1>;
-	pinctrl-1 = <&pinctrl0_i2c1_gpio &pinctrl1_i2c1_gpio>;
-	scl-gpios = <&gpio0 19 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
-	sda-gpios = <&gpio0 20 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	pinctrl-0 = <&pinctrl_i2c1>;
+	pinctrl-1 = <&pinctrl_i2c1_gpio>;
+	scl-gpios = <&gpio 19 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	sda-gpios = <&gpio 20 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	status = "okay";
 };
 
 &i2c2 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
-	pinctrl-0 = <&pinctrl0_i2c2 &pinctrl1_i2c2>;
-	pinctrl-1 = <&pinctrl0_i2c2_gpio &pinctrl1_i2c2_gpio>;
-	scl-gpios = <&gpio0 21 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
-	sda-gpios = <&gpio0 22 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	pinctrl-0 = <&pinctrl_i2c2>;
+	pinctrl-1 = <&pinctrl_i2c2_gpio>;
+	scl-gpios = <&gpio 21 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	sda-gpios = <&gpio 22 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	status = "okay";
 };
 
 &i2c4 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
-	pinctrl-0 = <&pinctrl0_i2c4 &pinctrl1_i2c4>;
-	pinctrl-1 = <&pinctrl0_i2c4_gpio &pinctrl1_i2c4_gpio>;
-	scl-gpios = <&gpio0 34 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
-	sda-gpios = <&gpio0 33 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	pinctrl-0 = <&pinctrl_i2c4>;
+	pinctrl-1 = <&pinctrl_i2c4_gpio>;
+	scl-gpios = <&gpio 34 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	sda-gpios = <&gpio 33 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	status = "okay";
 
 	vr5510@20 {
@@ -139,28 +139,30 @@
 	};
 };
 
-&pinctrl0 {
-	board_pinctrl0 {
+&pinctrl {
+	board_pinctrl {
 		u-boot,dm-pre-reloc;
-		pinctrl0_dspi0: pinctrl0_dspi0 {
+		pinctrl_dspi0: pinctrl_dspi0 {
 			fsl,pins = <PA13_MSCR_S32G PA13_SPI0_SCK_CFG
 				    PA14_MSCR_S32G PA14_SPI0_SIN_CFG
 				    PA15_MSCR_S32G PA15_SPI0_SOUT_CFG
 				    PB09_MSCR_S32G PB09_SPI0_CS1_CFG
 				    PB10_MSCR_S32G PB10_SPI0_CS2_CFG
+				    DSPI0_SIN_IMCR PA14_SPI0_SIN_IN
 				    >;
 		};
 
-		pinctrl0_dspi1: pinctrl0_dspi1 {
+		pinctrl_dspi1: pinctrl_dspi1 {
 			fsl,pins = <PA06_MSCR_S32G PA06_SPI1_SOUT_CFG
 				    PA07_MSCR_S32G PA07_SPI1_CS0_CFG
 				    PA08_MSCR_S32G PA08_SPI1_SCK_CFG
 				    PE04_MSCR_S32G PE04_SPI1_CS3_CFG
 				    PF15_MSCR_S32G PF15_SPI1_SIN_CFG
+				    DSPI1_SIN_IMCR PF15_SPI1_SIN_IN
 				    >;
 		};
 
-		pinctrl0_i2c0: pinctrl0_i2c0 {
+		pinctrl_i2c0: pinctrl_i2c0 {
 			fsl,pins = <PB00_MSCR_S32G PB00_I2C0_SDA_CFG
 				    PB01_MSCR_S32G PB01_I2C0_SCL_CFG
 				    I2C0_SDA_IMCR PB00_I2C0_SDA_IN
@@ -168,7 +170,7 @@
 				    >;
 		};
 
-		pinctrl0_i2c0_gpio: pinctrl0_i2c0_gpio {
+		pinctrl_i2c0_gpio: pinctrl_i2c0_gpio {
 			fsl,pins = <PB00_MSCR_S32G PB00_I2C0_SDA_GPIO
 				    PB01_MSCR_S32G PB01_I2C0_SCL_GPIO
 				    I2C0_SDA_IMCR IMCR_DISABLED
@@ -176,43 +178,55 @@
 				    >;
 		};
 
-		pinctrl0_i2c1: pinctrl0_i2c1 {
+		pinctrl_i2c1: pinctrl_i2c1 {
 			fsl,pins = <PB03_MSCR_S32G PB03_I2C1_SCL_CFG
 				    PB04_MSCR_S32G PB04_I2C1_SDA_CFG
+				    I2C1_SCL_IMCR PB03_I2C1_SCL_IN
+				    I2C1_SDA_IMCR PB04_I2C1_SDA_IN
 				    >;
 		};
 
-		pinctrl0_i2c1_gpio: pinctrl0_i2c1_gpio {
+		pinctrl_i2c1_gpio: pinctrl_i2c1_gpio {
 			fsl,pins = <PB03_MSCR_S32G PB03_I2C1_SCL_GPIO
 				    PB04_MSCR_S32G PB04_I2C1_SDA_GPIO
+				    I2C1_SCL_IMCR IMCR_DISABLED
+				    I2C1_SDA_IMCR IMCR_DISABLED
 				    >;
 		};
 
-		pinctrl0_i2c2: pinctrl0_i2c2 {
+		pinctrl_i2c2: pinctrl_i2c2 {
 			fsl,pins = <PB05_MSCR_S32G PB05_I2C2_SCL_CFG
 				    PB06_MSCR_S32G PB06_I2C2_SDA_CFG
+				    I2C2_SCL_IMCR PB05_I2C2_SCL_IN
+				    I2C2_SDA_IMCR PB06_I2C2_SDA_IN
 				    >;
 		};
 
-		pinctrl0_i2c2_gpio: pinctrl0_i2c2_gpio {
+		pinctrl_i2c2_gpio: pinctrl_i2c2_gpio {
 			fsl,pins = <PB05_MSCR_S32G PB05_I2C2_SCL_GPIO
 				    PB06_MSCR_S32G PB06_I2C2_SDA_GPIO
+				    I2C2_SCL_IMCR IMCR_DISABLED
+				    I2C2_SDA_IMCR IMCR_DISABLED
 				    >;
 		};
 
-		pinctrl0_i2c4: pinctrl0_i2c4 {
+		pinctrl_i2c4: pinctrl_i2c4 {
 			fsl,pins = <PC01_MSCR_S32G PC01_I2C4_SDA_CFG
 				    PC02_MSCR_S32G PC02_I2C4_SCL_CFG
+				    I2C4_SDA_IMCR PC01_I2C4_SDA_IN
+				    I2C4_SCL_IMCR PC02_I2C4_SCL_IN
 				    >;
 		};
 
-		pinctrl0_i2c4_gpio: pinctrl0_i2c4_gpio {
+		pinctrl_i2c4_gpio: pinctrl_i2c4_gpio {
 			fsl,pins = <PC01_MSCR_S32G PC01_I2C4_SDA_GPIO
 				    PC02_MSCR_S32G PC02_I2C4_SCL_GPIO
+				    I2C4_SDA_IMCR IMCR_DISABLED
+				    I2C4_SCL_IMCR IMCR_DISABLED
 				    >;
 		};
 
-		pinctrl0_qspi: pinctrl0_qspi {
+		pinctrl_qspi: pinctrl_qspi {
 			fsl,pins = <PF05_MSCR_S32G PF05_QSPI_DATA_A0_CFG
 				    PF06_MSCR_S32G PF06_QSPI_DATA_A1_CFG
 				    PF07_MSCR_S32G PF07_QSPI_DATA_A2_CFG
@@ -240,7 +254,7 @@
 				    >;
 		};
 
-		pinctrl0_uart0: pinctrl0_uart0 {
+		pinctrl_uart0: pinctrl_uart0 {
 			u-boot,dm-pre-reloc;
 			fsl,pins = <PC09_MSCR_S32G PC09_LIN0_TX_CFG
 				    PC10_MSCR_S32G PC10_LIN0_RX_CFG
@@ -249,58 +263,8 @@
 	};
 };
 
-&pinctrl1 {
-	board_pinctrl1 {
-		pinctrl1_dspi0: pinctrl1_dspi0 {
-			fsl,pins = <DSPI0_SIN_IMCR PA14_SPI0_SIN_IN
-				    >;
-		};
-
-		pinctrl1_dspi1: pinctrl1_dspi1 {
-			fsl,pins = <DSPI1_SIN_IMCR PF15_SPI1_SIN_IN
-				    >;
-		};
-
-		pinctrl1_i2c1: pinctrl1_i2c1 {
-			fsl,pins = <I2C1_SCL_IMCR PB03_I2C1_SCL_IN
-				    I2C1_SDA_IMCR PB04_I2C1_SDA_IN
-				    >;
-		};
-
-		pinctrl1_i2c1_gpio: pinctrl1_i2c1_gpio {
-			fsl,pins = <I2C1_SCL_IMCR IMCR_DISABLED
-				    I2C1_SDA_IMCR IMCR_DISABLED
-				    >;
-		};
-
-		pinctrl1_i2c2: pinctrl1_i2c2 {
-			fsl,pins = <I2C2_SCL_IMCR PB05_I2C2_SCL_IN
-				    I2C2_SDA_IMCR PB06_I2C2_SDA_IN
-				    >;
-		};
-
-		pinctrl1_i2c2_gpio: pinctrl1_i2c2_gpio {
-			fsl,pins = <I2C2_SCL_IMCR IMCR_DISABLED
-				    I2C2_SDA_IMCR IMCR_DISABLED
-				    >;
-		};
-
-		pinctrl1_i2c4: pinctrl1_i2c4 {
-			fsl,pins = <I2C4_SDA_IMCR PC01_I2C4_SDA_IN
-				    I2C4_SCL_IMCR PC02_I2C4_SCL_IN
-				    >;
-		};
-
-		pinctrl1_i2c4_gpio: pinctrl1_i2c4_gpio {
-			fsl,pins = <I2C4_SDA_IMCR IMCR_DISABLED
-				    I2C4_SCL_IMCR IMCR_DISABLED
-				    >;
-		};
-	};
-};
-
 &qspi {
-	pinctrl-0 = <&pinctrl0_qspi>;
+	pinctrl-0 = <&pinctrl_qspi>;
 	pinctrl-names = "default";
 	status = "okay";
 
@@ -318,7 +282,7 @@
 };
 
 &uart0 {
-	pinctrl-0 = <&pinctrl0_uart0>;
+	pinctrl-0 = <&pinctrl_uart0>;
 	pinctrl-names = "default";
 	status = "okay";
 };
