--- a/fdts/s32gxxxa-evb.dtsi
+++ b/fdts/s32gxxxa-evb.dtsi
@@ -16,7 +16,7 @@
 		reg = <0x0 0x44064000 0x0 0x200>;
 		clocks = <&clks S32G_SCMI_CLK_USB_MEM>,
 			   <&clks S32G_SCMI_CLK_USB_LOW>;
-		pinctrl-0 = <&pinctrl0_usb &pinctrl1_usb>;
+		pinctrl-0 = <&pinctrl_usb>;
 		pinctrl-names = "default";
 		phys = <&saf1508_phy>;
 		dr_mode = "host";
@@ -30,7 +30,7 @@
 };
 
 &usdhc0 {
-	pinctrl-0 = <&pinctrl0_sd0>;
+	pinctrl-0 = <&pinctrl_sd0>;
 	pinctrl-1 = <>;
 	pinctrl-2 = <>;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
@@ -38,13 +38,13 @@
 };
 
 &spi1 {
-	pinctrl-0 = <&pinctrl0_dspi1 &pinctrl1_dspi1>;
+	pinctrl-0 = <&pinctrl_dspi1>;
 	pinctrl-names = "default";
 	status = "okay";
 };
 
 &spi5 {
-	pinctrl-0 = <&pinctrl0_dspi5 &pinctrl1_dspi5>;
+	pinctrl-0 = <&pinctrl_dspi5>;
 	pinctrl-names = "default";
 	status = "okay";
 
@@ -95,10 +95,10 @@
 &i2c0 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
-	pinctrl-0 = <&pinctrl0_i2c0>;
-	pinctrl-1 = <&pinctrl0_i2c0_gpio>;
-	scl-gpios = <&gpio0 17 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
-	sda-gpios = <&gpio0 16 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	pinctrl-0 = <&pinctrl_i2c0>;
+	pinctrl-1 = <&pinctrl_i2c0_gpio>;
+	scl-gpios = <&gpio 17 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	sda-gpios = <&gpio 16 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	status = "okay";
 };
 
@@ -106,10 +106,10 @@
 &i2c1 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
-	pinctrl-0 = <&pinctrl0_i2c1 &pinctrl1_i2c1>;
-	pinctrl-1 = <&pinctrl0_i2c1_gpio &pinctrl1_i2c1_gpio>;
-	scl-gpios = <&gpio0 19 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
-	sda-gpios = <&gpio0 20 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	pinctrl-0 = <&pinctrl_i2c1>;
+	pinctrl-1 = <&pinctrl_i2c1_gpio>;
+	scl-gpios = <&gpio 19 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	sda-gpios = <&gpio 20 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	status = "okay";
 };
 
@@ -117,10 +117,10 @@
 &i2c2 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
-	pinctrl-0 = <&pinctrl0_i2c2 &pinctrl1_i2c2>;
-	pinctrl-1 = <&pinctrl0_i2c2_gpio &pinctrl1_i2c2_gpio>;
-	scl-gpios = <&gpio0 21 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
-	sda-gpios = <&gpio0 22 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	pinctrl-0 = <&pinctrl_i2c2>;
+	pinctrl-1 = <&pinctrl_i2c2_gpio>;
+	scl-gpios = <&gpio 21 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	sda-gpios = <&gpio 22 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	status = "okay";
 };
 
@@ -128,10 +128,10 @@
 &i2c4 {
 	status = "okay";
 	pinctrl-names = "default", "gpio";
-	pinctrl-0 = <&pinctrl0_i2c4 &pinctrl1_i2c4>;
-	pinctrl-1 = <&pinctrl0_i2c4_gpio &pinctrl1_i2c4_gpio>;
-	scl-gpios = <&gpio0 34 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
-	sda-gpios = <&gpio0 33 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	pinctrl-0 = <&pinctrl_i2c4>;
+	pinctrl-1 = <&pinctrl_i2c4_gpio>;
+	scl-gpios = <&gpio 34 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	sda-gpios = <&gpio 33 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	clock-frequency = <100000>;
 
 	vr5510@20 {
@@ -147,10 +147,10 @@
 	};
 };
 
-&pinctrl0 {
-	board_pinctrl0 {
+&pinctrl {
+	board_pinctrl {
 		u-boot,dm-pre-reloc;
-		pinctrl0_i2c0: pinctrl0_i2c0 {
+		pinctrl_i2c0: pinctrl_i2c0 {
 			fsl,pins = <PB00_MSCR_S32G PB00_I2C0_SDA_CFG
 				    PB01_MSCR_S32G PB01_I2C0_SCL_CFG
 				    I2C0_SDA_IMCR PB00_I2C0_SDA_IN
@@ -158,7 +158,7 @@
 				    >;
 		};
 
-		pinctrl0_i2c0_gpio: pinctrl0_i2c0_gpio {
+		pinctrl_i2c0_gpio: pinctrl_i2c0_gpio {
 			fsl,pins = <PB00_MSCR_S32G PB00_I2C0_SDA_GPIO
 				    PB01_MSCR_S32G PB01_I2C0_SCL_GPIO
 				    I2C0_SDA_IMCR IMCR_DISABLED
@@ -166,43 +166,55 @@
 				    >;
 		};
 
-		pinctrl0_i2c1: pinctrl0_i2c1 {
+		pinctrl_i2c1: pinctrl_i2c1 {
 			fsl,pins = <PB03_MSCR_S32G PB03_I2C1_SCL_CFG
 				    PB04_MSCR_S32G PB04_I2C1_SDA_CFG
+				    I2C1_SCL_IMCR PB03_I2C1_SCL_IN
+				    I2C1_SDA_IMCR PB04_I2C1_SDA_IN
 				    >;
 		};
 
-		pinctrl0_i2c1_gpio: pinctrl0_i2c1_gpio {
+		pinctrl_i2c1_gpio: pinctrl_i2c1_gpio {
 			fsl,pins = <PB03_MSCR_S32G PB03_I2C1_SCL_GPIO
 				    PB04_MSCR_S32G PB04_I2C1_SDA_GPIO
+				    I2C1_SCL_IMCR IMCR_DISABLED
+				    I2C1_SDA_IMCR IMCR_DISABLED
 				    >;
 		};
 
-		pinctrl0_i2c2: pinctrl0_i2c2 {
+		pinctrl_i2c2: pinctrl_i2c2 {
 			fsl,pins = <PB05_MSCR_S32G PB05_I2C2_SCL_CFG
 				    PB06_MSCR_S32G PB06_I2C2_SDA_CFG
+				    I2C2_SCL_IMCR PB05_I2C2_SCL_IN
+				    I2C2_SDA_IMCR PB06_I2C2_SDA_IN
 				    >;
 		};
 
-		pinctrl0_i2c2_gpio: pinctrl0_i2c2_gpio {
+		pinctrl_i2c2_gpio: pinctrl_i2c2_gpio {
 			fsl,pins = <PB05_MSCR_S32G PB05_I2C2_SCL_GPIO
 				    PB06_MSCR_S32G PB06_I2C2_SDA_GPIO
+				    I2C2_SCL_IMCR IMCR_DISABLED
+				    I2C2_SDA_IMCR IMCR_DISABLED
 				    >;
 		};
 
-		pinctrl0_i2c4: pinctrl0_i2c4 {
+		pinctrl_i2c4: pinctrl_i2c4 {
 			fsl,pins = <PC01_MSCR_S32G PC01_I2C4_SDA_CFG
 				    PC02_MSCR_S32G PC02_I2C4_SCL_CFG
+				    I2C4_SDA_IMCR PC01_I2C4_SDA_IN
+				    I2C4_SCL_IMCR PC02_I2C4_SCL_IN
 				    >;
 		};
 
-		pinctrl0_i2c4_gpio: pinctrl0_i2c4_gpio {
+		pinctrl_i2c4_gpio: pinctrl_i2c4_gpio {
 			fsl,pins = <PC01_MSCR_S32G PC01_I2C4_SDA_GPIO
 				    PC02_MSCR_S32G PC02_I2C4_SCL_GPIO
+				    I2C4_SDA_IMCR IMCR_DISABLED
+				    I2C4_SCL_IMCR IMCR_DISABLED
 				    >;
 		};
 
-		pinctrl0_qspi: pinctrl0_qspi {
+		pinctrl_qspi: pinctrl_qspi {
 			fsl,pins = <PF05_MSCR_S32G PF05_QSPI_DATA_A0_CFG
 				    PF06_MSCR_S32G PF06_QSPI_DATA_A1_CFG
 				    PF07_MSCR_S32G PF07_QSPI_DATA_A2_CFG
@@ -230,89 +242,30 @@
 				    >;
 		};
 
-		pinctrl0_dspi1: pinctrl0_dspi1 {
+		pinctrl_dspi1: pinctrl_dspi1 {
 			fsl,pins = <PA06_MSCR_S32G PA06_SPI1_SOUT_CFG
 				    PA07_MSCR_S32G PA07_SPI1_CS0_CFG
 				    PA08_MSCR_S32G PA08_SPI1_SCK_CFG
 				    PF15_MSCR_S32G PF15_SPI1_SIN_CFG
+				    DSPI1_SIN_IMCR PF15_SPI1_SIN_IN
 				    >;
 		};
 
-		pinctrl0_dspi5: pinctrl0_dspi5 {
+		pinctrl_dspi5: pinctrl_dspi5 {
 			fsl,pins = <PA09_MSCR_S32G PA09_SPI5_SCK_CFG
 				    PA10_MSCR_S32G PA10_SPI5_SIN_CFG
 				    PA11_MSCR_S32G PA11_SPI5_SOUT_CFG
 				    PA12_MSCR_S32G PA12_SPI5_CS0_CFG
+				    DSPI5_SIN_IMCR PA10_SPI5_SIN_IN
 				    >;
 		};
 
-		pinctrl0_usb: pinctrl0_usb {
+		pinctrl_usb: pinctrl_usb {
 			fsl,pins = <PD14_MSCR_S32G PD14_USB_DATA0_CFG
 				    PD15_MSCR_S32G PD15_USB_DATA1_CFG
 				    PE00_MSCR_S32G PE00_USB_DATA2_CFG
 				    PE01_MSCR_S32G PE01_USB_DATA3_CFG
-				    >;
-		};
-
-		pinctrl0_uart0: pinctrl0_uart0 {
-			u-boot,dm-pre-reloc;
-			fsl,pins = <PC09_MSCR_S32G PC09_LIN0_TX_CFG
-				    PC10_MSCR_S32G PC10_LIN0_RX_CFG
-				    LIN0_RX_IMCR PC10_LIN0_RX_IN>;
-		};
-	};
-};
-
-&pinctrl1 {
-	board_pinctrl1 {
-		pinctrl1_i2c1: pinctrl1_i2c1 {
-			fsl,pins = <I2C1_SCL_IMCR PB03_I2C1_SCL_IN
-				    I2C1_SDA_IMCR PB04_I2C1_SDA_IN
-				    >;
-		};
-
-		pinctrl1_i2c1_gpio: pinctrl1_i2c1_gpio {
-			fsl,pins = <I2C1_SCL_IMCR IMCR_DISABLED
-				    I2C1_SDA_IMCR IMCR_DISABLED
-				    >;
-		};
-
-		pinctrl1_i2c2: pinctrl1_i2c2 {
-			fsl,pins = <I2C2_SCL_IMCR PB05_I2C2_SCL_IN
-				    I2C2_SDA_IMCR PB06_I2C2_SDA_IN
-				    >;
-		};
-
-		pinctrl1_i2c2_gpio: pinctrl1_i2c2_gpio {
-			fsl,pins = <I2C2_SCL_IMCR IMCR_DISABLED
-				    I2C2_SDA_IMCR IMCR_DISABLED
-				    >;
-		};
-
-		pinctrl1_i2c4: pinctrl1_i2c4 {
-			fsl,pins = <I2C4_SDA_IMCR PC01_I2C4_SDA_IN
-				    I2C4_SCL_IMCR PC02_I2C4_SCL_IN
-				    >;
-		};
-
-		pinctrl1_i2c4_gpio: pinctrl1_i2c4_gpio {
-			fsl,pins = <I2C4_SDA_IMCR IMCR_DISABLED
-				    I2C4_SCL_IMCR IMCR_DISABLED
-				    >;
-		};
-
-		pinctrl1_dspi1: pinctrl1_dspi1 {
-			fsl,pins = <DSPI1_SIN_IMCR PF15_SPI1_SIN_IN
-				    >;
-		};
-
-		pinctrl1_dspi5: pinctrl1_dspi5 {
-			fsl,pins = <DSPI5_SIN_IMCR PA10_SPI5_SIN_IN
-				    >;
-		};
-
-		pinctrl1_usb: pinctrl1_usb {
-			fsl,pins = <PH00_MSCR_S32G PH00_USB_DATA7_CFG
+				    PH00_MSCR_S32G PH00_USB_DATA7_CFG
 				    PL08_MSCR_S32G PL08_USB_CLK_CFG
 				    PL09_MSCR_S32G PL09_USB_DIR_CFG
 				    PL10_MSCR_S32G PL10_USB_STP_CFG
@@ -333,16 +286,23 @@
 				    USB_ULPI_NXT_IMCR PL11_USB_NXT_IN
 				    >;
 		};
+
+		pinctrl_uart0: pinctrl_uart0 {
+			u-boot,dm-pre-reloc;
+			fsl,pins = <PC09_MSCR_S32G PC09_LIN0_TX_CFG
+				    PC10_MSCR_S32G PC10_LIN0_RX_CFG
+				    LIN0_RX_IMCR PC10_LIN0_RX_IN>;
+		};
 	};
 };
 
 &qspi {
-	pinctrl-0 = <&pinctrl0_qspi>;
+	pinctrl-0 = <&pinctrl_qspi>;
 	pinctrl-names = "default";
 };
 
 &uart0 {
-	pinctrl-0 = <&pinctrl0_uart0>;
+	pinctrl-0 = <&pinctrl_uart0>;
 	pinctrl-names = "default";
 	status = "okay";
 };
