--- a/fdts/s32r45.dtsi
+++ b/fdts/s32r45.dtsi
@@ -8,6 +8,7 @@
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/nvmem/s32cc-siul2-nvmem.h>
 #include <dt-bindings/pinctrl/s32r45-pinctrl.h>
+#include <dt-bindings/memory/s32-siul2.h>
 
 #include "s32cc.dtsi"
 / {
@@ -70,31 +71,85 @@
 	};
 
 	soc {
-		siul2_0@4009c000 {
+		siul2@4009c000 {
 			compatible = "simple-mfd";
 			status = "okay";
-			reg = <0x0 0x4009c000 0x0 0x2000>;
 			u-boot,dm-pre-reloc;
+			#address-cells = <2>;
+			#size-cells = <2>;
 
-			pinctrl0: siul2-pinctrl0 {
-				compatible = "nxp,s32cc-siul2-pinctrl";
+				 /* MIDR */
+			ranges = <MIDR_SIUL2_0 0 0x0 0x4009c000 0x0 0x10>,
+				 <MIDR_SIUL2_1 0 0x0 0x4403c000 0x0 0x10>,
+
+				 /* MSCR 0-101 */
+				 <MSCRS_SIUL2_0 0 0x0 0x4009c240 0x0 0x198>,
+				 /* MSCR 102-133 */
+				 <MSCRS_SIUL2_1 0 0x0 0x4403c3d8 0x0 0x80>,
+
+				 /* IMCR range 512–595 */
+				 <IMCRS_SIUL2_0 0 0x0 0x4009ca40 0x0 0x150>,
+				 /* IMCR range 603 - 695 */
+				 <IMCRS_SIUL2_1_0 0 0x0 0x4403cbac 0x0 0x174>,
+				 /* IMCR range 696 - 727 (EIRQs) */
+				 <IMCRS_SIUL2_1_EIRQS 0 0x0 0x4403cd20 0x0 0x80>,
+				 /* IMCR range 728 - 785 */
+				 <IMCRS_SIUL2_1_1 0 0x0 0x4403cda0 0x0 0xe8>,
+
+				 /* Output pads */
+				 <OPADS_SIUL2_0 0 0x0 0x4009d700 0x0 0x10>,
+				 <OPADS_SIUL2_1 0 0x0 0x4403d700 0x0 0x14>,
+
+				 /* Input pads */
+				 <IPADS_SIUL2_0 0 0x0 0x4009d740 0x0 0x10>,
+				 <IPADS_SIUL2_1 0 0x0 0x4403d740 0x0 0x14>,
+
+				/* EIRQs */
+				 <EIRQS_SIUL2_1 0 0x0 0x4403c010 0x0 0xb4>;
+
+			pinctrl: siul2-pinctrl@4009c240 {
+				compatible = "nxp,s32r45-siul2-pinctrl";
 				#pinctrl-cells = <2>;
+
+				reg = <MSCRS_SIUL2_0   0 0x0 0x198>,
+				      <MSCRS_SIUL2_1   0 0x0 0x80>,
+				      <IMCRS_SIUL2_0   0 0x0 0x150>,
+				      <IMCRS_SIUL2_1_0 0 0x0 0x174>,
+				      <IMCRS_SIUL2_1_1 0 0x0 0xe8>;
+
 				/* MSCR range */
-				pins = <&pinctrl0 0 101>,
+				nxp,pins = <0   101
+					    102 133
 				/* IMCR range */
-				<&pinctrl0 512 573>;
+					    512 595
+					    603 695
+					    728 785>;
 				status = "okay";
 			};
 
-			gpio0: siul2-gpio0 {
+			gpio: siul2-gpio@4009d700 {
 				compatible = "nxp,s32cc-siul2-gpio";
+
+				reg = <OPADS_SIUL2_0       0 0x0 0x10>,
+				      <OPADS_SIUL2_1       0 0x0 0x14>,
+				      <IPADS_SIUL2_0       0 0x0 0x10>,
+				      <IPADS_SIUL2_1       0 0x0 0x14>,
+				      <EIRQS_SIUL2_1       0 0x0 0xb4>,
+				      <IMCRS_SIUL2_1_EIRQS 0 0x0 0x80>;
+				reg-names = "opads0", "opads1", "ipads0",
+					    "ipads1", "eirqs", "eirq-imcrs";
+
 				#gpio-cells = <2>;
 				gpio-controller;
-				gpio-ranges = <&pinctrl0 0 0 102>;
+					/* GPIO 0-101 */
+				gpio-ranges = <&pinctrl 0 0 102>,
+					/* GPIO 102-133 */
+					      <&pinctrl 102 102 32>;
 				status = "okay";
 			};
 
 			siul2_0_nvram: siul2_0_nvram {
+				reg = <MIDR_SIUL2_0 0 0x0 0x10>;
 				#address-cells = <1>;
 				#size-cells = <1>;
 
@@ -144,6 +199,29 @@
 				};
 
 			};
+
+			siul2_1_nvram {
+				reg = <MIDR_SIUL2_1 0 0x0 0x10>;
+				#address-cells = <1>;
+				#size-cells = <1>;
+
+				compatible = "nxp,s32r-siul2_1-nvram";
+				status = "okay";
+				u-boot,dm-pre-reloc;
+
+				serdes_presence: serdes_presence@100 {
+					reg = <S32CC_SERDES_PRESENCE S32CC_CELL_SIZE>;
+				};
+
+				lax_presence: lax_presence@104 {
+					reg = <S32CC_LAX_PRESENCE S32CC_CELL_SIZE>;
+				};
+
+				soc_subminor: soc_subminor@108 {
+					reg = <S32CC_SOC_SUBMINOR S32CC_CELL_SIZE>;
+					u-boot,dm-pre-reloc;
+				};
+			};
 		};
 
 		gmac1: ethernet@44010000 {
@@ -180,54 +258,6 @@
 			fixed-link {
 				speed = <1000>;
 				full-duplex;
-			};
-		};
-
-		siul2_1@4403c000 {
-			compatible = "simple-mfd";
-			status = "okay";
-			reg = <0x0 0x4403c000 0x0 0x2000>;
-			u-boot,dm-pre-reloc;
-
-			pinctrl1: siul2-pinctrl1 {
-				compatible = "nxp,s32cc-siul2-pinctrl";
-				#pinctrl-cells = <2>;
-				/* MSCR range */
-				pins = <&pinctrl1 102 133>,
-				/* IMCR range */
-				<&pinctrl1 603 785>;
-				status = "okay";
-			};
-
-			gpio1: siul2-gpio1 {
-				compatible = "nxp,s32cc-siul2-gpio";
-				gpio-controller;
-				#gpio-cells = <2>;
-				gpio-ranges = <&pinctrl1 0 102 32>;
-				status = "okay";
-			};
-
-			siul2_1_nvram {
-				#address-cells = <1>;
-				#size-cells = <1>;
-
-				compatible = "nxp,s32r-siul2_1-nvram";
-				status = "okay";
-				u-boot,dm-pre-reloc;
-
-				serdes_presence: serdes_presence@100 {
-					reg = <S32CC_SERDES_PRESENCE S32CC_CELL_SIZE>;
-				};
-
-				lax_presence: lax_presence@104 {
-					reg = <S32CC_LAX_PRESENCE S32CC_CELL_SIZE>;
-				};
-
-				soc_subminor: soc_subminor@108 {
-					reg = <S32CC_SOC_SUBMINOR S32CC_CELL_SIZE>;
-					u-boot,dm-pre-reloc;
-				};
-
 			};
 		};
 
