s32r: qspi: Fix QSPI frequency
In case of S32R platforms, the QSPI frequency should be
set to 133.33 Mhz. In other case, it could lead to undefined
behaviour.

Issue: ALB-8970
Signed-off-by: Ciprian Costea <ciprianmarian.costea@nxp.com>

--- a/fdts/s32r45-evb.dts
+++ b/fdts/s32r45-evb.dts
@@ -14,6 +14,7 @@
 	compatible = "nxp,s32r45-qspi", "nxp,s32cc-qspi";
 	pinctrl-0 = <&pinctrl0_qspi>;
 	pinctrl-names = "default";
+	spi-max-frequency = <133333333>;
 	status = "okay";
 
 	mx25uw51245g@0 {
