--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -38,8 +38,9 @@
 		spi5 = &spi5;
 		spi6 = &qspi;
 		serdes0 = &serdes0;
-		pcie0 = &pcie0;
-		pcie1 = &pcie1;
+		serdes1 = &serdes1;
+		pci0 = &pcie0;
+		pci1 = &pcie1;
 		mmc0 = &usdhc0;
 		clks = &clks;
 		serial0 = &uart0;
@@ -818,9 +819,7 @@
 			reg-names = "dbi", "config";
 			#address-cells = <3>;
 			#size-cells = <2>;
-			device_type = "pci";
 			serdes-handle = <&serdes0>;
-			device_id = <0>;
 			nvmem-cells = <&siul2_0_nvram>;
 
 			ranges =
@@ -846,8 +845,6 @@
 			reg-names = "ss", "dbi";
 			#address-cells = <3>;
 			#size-cells = <2>;
-			device_type = "pci-generic";
-			device_id = <0>;
 			num-lanes = <2>; /* supports max 2 lanes */
 			clocks = <&clks S32GEN1_SCMI_CLK_SERDES_REF>;
 		};
@@ -867,10 +864,8 @@
 			reg-names = "dbi", "config";
 			#address-cells = <3>;
 			#size-cells = <2>;
-			device_type = "pci";
 			serdes-handle = <&serdes1>;
 			nvmem-cells = <&siul2_0_nvram>;
-			device_id = <1>;
 			ranges =
 				/* downstream I/O, 64KB and aligned naturally just
 				 * before the config space to minimize fragmentation
@@ -894,8 +889,6 @@
 			reg-names = "ss", "dbi";
 			#address-cells = <3>;
 			#size-cells = <2>;
-			device_type = "pci-generic";
-			device_id = <1>;
 			num-lanes = <1>; /* supports 1 lane */
 			clocks = <&clks S32GEN1_SCMI_CLK_SERDES_REF>;
 			status = "okay";
