s32cc: dts: qspi: Add QSPI partitions
Issue: ALB-9014
Signed-off-by: Ciprian Costea <ciprianmarian.costea@nxp.com>

--- a/fdts/s32gxxxa-rdb.dtsi
+++ b/fdts/s32gxxxa-rdb.dtsi
@@ -4,6 +4,7 @@
  */
 
 #include <dt-bindings/gpio/gpio.h>
+#include "s32g-nxp-flash-macronix.dtsi"
 
 &usdhc0 {
 	/* By default sd0 pins were able to work at 100Mhz and 200Mhz */
