fdts: s32: change the clock-name from ts to ptp_ref for gmac
GMAC clock-naming for TS has been changed in Linux from TS to PTP_REF.
Make the necessary change since we have code in U-Boot that searches for
"ptp_ref" clocking to initialize.

Issue: ALB-8981
Signed-off-by: Andrei Botila <andrei.botila@nxp.com>

--- a/fdts/s32r45-evb.dts
+++ b/fdts/s32r45-evb.dts
@@ -52,7 +52,7 @@
 		 <&clks S32GEN1_SCMI_CLK_GMAC0_RX_RGMII>,
 		 <&clks S32GEN1_SCMI_CLK_GMAC0_TX_RGMII>,
 		 <&clks S32GEN1_SCMI_CLK_GMAC0_AXI>;
-	clock-names = "ts", "rx_sgmii", "tx_sgmii",
+	clock-names = "ptp_ref", "rx_sgmii", "tx_sgmii",
 		      "rx_rgmii", "tx_rgmii", "axi";
 	pinctrl-0 = <&pinctrl0_gmac0 &pinctrl0_gmac0_mdio>;
 	pinctrl-1 = <&pinctrl0_gmac0_mdio>;
