fdts: s32r45: Add missing SDHC clock
Issue: ALB-8983
Signed-off-by: Andra-Teodora Ilie <andra.ilie@nxp.com>

--- a/fdts/s32r45.dtsi
+++ b/fdts/s32r45.dtsi
@@ -310,6 +310,7 @@
 		<&plat_clks S32GEN1_CLK_CAN_PE>,
 		<&plat_clks S32GEN1_CLK_LIN_BAUD>,
 		<&plat_clks S32GEN1_CLK_SPI>,
+		<&plat_clks S32GEN1_CLK_SDHC>,
 		<&plat_clks S32GEN1_CLK_QSPI>;
 };
 
