--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -881,9 +881,6 @@
 		serdes0: serdes@40480000 {
 			#phy-cells = <3>;
 			compatible = "nxp,s32cc-serdes";
-			reg = <0x00 0x40480000 0x0 0x04000  /* serdes registers */
-			      0x00 0x40400000 0x0 0x80000>; /* dbi registers */
-			reg-names = "ss", "dbi";
 			#address-cells = <3>;
 			#size-cells = <2>;
 			num-lanes = <2>; /* supports max 2 lanes */
@@ -891,6 +888,11 @@
 				 <&reset S32GEN1_SCMI_RST_PCIE0>;
 			reset-names = "serdes", "pcie";
 			clocks = <&clks S32GEN1_SCMI_CLK_SERDES_REF>;
+			reg = <0x0 0x40480000 0x0 0x108>,
+			      <0x0 0x40483008 0x0 0x10>,
+			      <0x0 0x40482000 0x0 0x800>,
+			      <0x0 0x40482800 0x0 0x800>;
+			reg-names = "ss_pcie", "pcie_phy", "xpcs0", "xpcs1";
 		};
 
 		rdc: rdc@40080000 {
@@ -928,9 +930,6 @@
 		serdes1: serdes@44180000 {
 			#phy-cells = <3>;
 			compatible = "nxp,s32cc-serdes";
-			reg = <0x00 0x44180000 0x0 0x04000   /* serdes registers */
-			       0x00 0x44100000 0x0 0x80000>; /* dbi registers */
-			reg-names = "ss", "dbi";
 			#address-cells = <3>;
 			#size-cells = <2>;
 			num-lanes = <1>; /* supports 1 lane */
@@ -938,6 +937,11 @@
 				 <&reset S32GEN1_SCMI_RST_PCIE1>;
 			reset-names = "serdes", "pcie";
 			clocks = <&clks S32GEN1_SCMI_CLK_SERDES_REF>;
+			reg = <0x0 0x44180000 0x0 0x108>,
+			      <0x0 0x44183008 0x0 0x10>,
+			      <0x0 0x44182000 0x0 0x800>,
+			      <0x0 0x44182800 0x0 0x800>;
+			reg-names = "ss_pcie", "pcie_phy", "xpcs0", "xpcs1";
 			status = "okay";
 		};
 
