fdts: s32g3: move cpu clusters in cpu-map node
Issue: ALB-9011

Signed-off-by: Radu Pirea <radu-nicolae.pirea@nxp.com>

--- a/fdts/s32g3.dtsi
+++ b/fdts/s32g3.dtsi
@@ -20,23 +20,25 @@
 	};
 
 	cpus {
-		cluster0 {
-			core2 {
-				cpu = <&cpu4>;
+		cpu-map {
+			cluster0 {
+				core2 {
+					cpu = <&cpu4>;
+				};
+
+				core3 {
+					cpu = <&cpu5>;
+				};
 			};
 
-			core3 {
-				cpu = <&cpu5>;
-			};
-		};
+			cluster1 {
+				core2 {
+					cpu = <&cpu6>;
+				};
 
-		cluster1 {
-			core2 {
-				cpu = <&cpu6>;
-			};
-
-			core3 {
-				cpu = <&cpu7>;
+				core3 {
+					cpu = <&cpu7>;
+				};
 			};
 		};
 
