--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -520,6 +520,7 @@
 		};
 
 		a53_gpr@4007c400 {
+			u-boot,dm-pre-reloc;
 			compatible = "nxp,s32cc-a53-gpr";
 			reg = <0x0 0x4007c400 0x0 0x100>;
 			status = "okay";
