--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -881,13 +881,17 @@
 		serdes0: serdes@40480000 {
 			#phy-cells = <3>;
 			compatible = "nxp,s32cc-serdes";
+			clocks = <&clks S32GEN1_SCMI_CLK_SERDES_AXI>,
+				 <&clks S32GEN1_SCMI_CLK_SERDES_AUX>,
+				 <&clks S32GEN1_SCMI_CLK_SERDES_APB>,
+				 <&clks S32GEN1_SCMI_CLK_SERDES_REF>;
+			clock-names = "axi", "aux", "apb", "ref";
 			#address-cells = <3>;
 			#size-cells = <2>;
 			num-lanes = <2>; /* supports max 2 lanes */
 			resets = <&reset S32GEN1_SCMI_RST_SERDES0>,
 				 <&reset S32GEN1_SCMI_RST_PCIE0>;
 			reset-names = "serdes", "pcie";
-			clocks = <&clks S32GEN1_SCMI_CLK_SERDES_REF>;
 			reg = <0x0 0x40480000 0x0 0x108>,
 			      <0x0 0x40483008 0x0 0x10>,
 			      <0x0 0x40482000 0x0 0x800>,
@@ -930,13 +934,17 @@
 		serdes1: serdes@44180000 {
 			#phy-cells = <3>;
 			compatible = "nxp,s32cc-serdes";
+			clocks = <&clks S32GEN1_SCMI_CLK_SERDES_AXI>,
+				 <&clks S32GEN1_SCMI_CLK_SERDES_AUX>,
+				 <&clks S32GEN1_SCMI_CLK_SERDES_APB>,
+				 <&clks S32GEN1_SCMI_CLK_SERDES_REF>;
+			clock-names = "axi", "aux", "apb", "ref";
 			#address-cells = <3>;
 			#size-cells = <2>;
 			num-lanes = <1>; /* supports 1 lane */
 			resets = <&reset S32GEN1_SCMI_RST_SERDES1>,
 				 <&reset S32GEN1_SCMI_RST_PCIE1>;
 			reset-names = "serdes", "pcie";
-			clocks = <&clks S32GEN1_SCMI_CLK_SERDES_REF>;
 			reg = <0x0 0x44180000 0x0 0x108>,
 			      <0x0 0x44183008 0x0 0x10>,
 			      <0x0 0x44182000 0x0 0x800>,
