--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -8,6 +8,7 @@
 #include <dt-bindings/clock/s32gen1-clock-freq.h>
 #include <dt-bindings/clock/s32gen1-clock.h>
 #include <dt-bindings/clock/s32gen1-scmi-clock.h>
+#include <dt-bindings/perf/s32gen1-scmi-perf.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/phy/phy.h>
 #include <dt-bindings/reset/s32gen1-scmi-reset.h>
@@ -81,6 +82,11 @@
 			#size-cells = <0>;
 			status = "okay";
 
+			dfs: protocol@13 {
+				reg = <0x13>;
+				#clock-cells = <1>;
+			};
+
 			clks: protocol@14 {
 				u-boot,dm-pre-reloc;
 
@@ -132,6 +138,7 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x0>;
 			enable-method = "psci";
+			clocks = <&dfs S32GEN1_SCMI_PERF_A53>;
 			next-level-cache = <&cluster0_l2_cache>;
 
 			nvmem-cells = <&soc_letter>, <&part_no>,
@@ -146,6 +153,7 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x1>;
 			enable-method = "psci";
+			clocks = <&dfs S32GEN1_SCMI_PERF_A53>;
 			next-level-cache = <&cluster0_l2_cache>;
 
 			nvmem-cells = <&soc_letter>, <&part_no>,
@@ -159,6 +167,7 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x100>;
 			enable-method = "psci";
+			clocks = <&dfs S32GEN1_SCMI_PERF_A53>;
 			next-level-cache = <&cluster1_l2_cache>;
 
 			nvmem-cells = <&soc_letter>, <&part_no>,
@@ -172,6 +181,7 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x101>;
 			enable-method = "psci";
+			clocks = <&dfs S32GEN1_SCMI_PERF_A53>;
 			next-level-cache = <&cluster1_l2_cache>;
 
 			nvmem-cells = <&soc_letter>, <&part_no>,
