--- a/fdts/s32g3.dtsi
+++ b/fdts/s32g3.dtsi
@@ -47,6 +47,7 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x2>;
 			enable-method = "psci";
+			clocks = <&dfs S32GEN1_SCMI_PERF_A53>;
 			next-level-cache = <&cluster0_l2_cache>;
 
 			nvmem-cells = <&soc_letter>, <&part_no>,
@@ -60,6 +61,7 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x3>;
 			enable-method = "psci";
+			clocks = <&dfs S32GEN1_SCMI_PERF_A53>;
 			next-level-cache = <&cluster0_l2_cache>;
 
 			nvmem-cells = <&soc_letter>, <&part_no>,
@@ -73,6 +75,7 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x102>;
 			enable-method = "psci";
+			clocks = <&dfs S32GEN1_SCMI_PERF_A53>;
 			next-level-cache = <&cluster1_l2_cache>;
 
 			nvmem-cells = <&soc_letter>, <&part_no>,
@@ -86,6 +89,7 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x103>;
 			enable-method = "psci";
+			clocks = <&dfs S32GEN1_SCMI_PERF_A53>;
 			next-level-cache = <&cluster1_l2_cache>;
 
 			nvmem-cells = <&soc_letter>, <&part_no>,
