--- a/fdts/s32g3.dtsi
+++ b/fdts/s32g3.dtsi
@@ -198,6 +198,10 @@
 	compatible = "nxp,s32g3-cmu";
 };
 
+&qspi {
+	compatible = "nxp,s32g3-qspi", "nxp,s32cc-qspi";
+};
+
 &siul2_0_nvram {
 	compatible = "nxp,s32g3-siul2_0-nvram";
 };
