s32gen1:pcie:dts: Sync max link speed attribute name with Linux device tree
Issue: ALB-9065

Signed-off-by: Ionut Vicovan <Ionut.Vicovan@nxp.com>

--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -872,7 +872,7 @@
 				 */
 				 0x82000000 0x0 0x00000000 0x58 0x00000000 0x7 0xfffe0000>;
 			num-lanes = <2>;
-			link-speed = <3>;
+			max-link-speed = <3>;
 			bus-range = <0x0 0xff>;
 
 			nvmem-cell-names = "serdes_presence", "pcie_variant";
@@ -927,7 +927,7 @@
 				 */
 				 0x82000000 0x0 0x00000000 0x48 0x00000000 0x7 0xfffe0000>;
 			num-lanes = <1>;
-			link-speed = <3>;
+			max-link-speed = <3>;
 			bus-range = <0x0 0xff>;
 
 			nvmem-cell-names = "serdes_presence", "pcie_variant";
